<resources>
    <string name="app_name">MenuBI</string>
    <string name="menu">MenuBI</string>
    <string name="slogan">Votre menu pour vous facilitez les commandes.Administrer et gérer son restaurant de même que passer sa commande aussi en toute liberté sans précipitation n\'aurait jamais été aussi facile et amusant
    </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Formpaiement">Formulaire de paiement</string>
    <string name="enter_number">Entrer votre numéro</string>
    <string name="somme">Entrer la somme</string>
    <string name="select_table">selectionner une table</string>
    <string name="paiement">Paiement</string>
    <string name="especes">Especes</string>
    <string name="autres">Autres</string>
    <string name="submit_form_pay">Valider</string>
    <string name="next">Suivant</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="txt">Texte</string>
    <string name="title_activity_client_pay">ClientPay</string>

    <string-array name="tables">
        <item name="table1">Table 1</item>
        <item name="table2">Table 2</item>
        <item name="table3">Table 3</item>
    </string-array>

    <string-array name="categorie">
        <item>Entrées</item>
        <item>desserts</item>
        <item>Plats de resistance</item>
        <item>Boisson</item>
    </string-array>

</resources>
