<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ClientPay"
    android:background="@drawable/waouh"
    android:orientation="vertical"
    android:padding="30dp"
    tools:showIn="@layout/activity_client_pay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:text="@string/Formpaiement"
            android:textStyle="bold"
            />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/graylight"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/refers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:textSize="22sp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/graylight"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:textSize="22sp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- <com.google.android.material.textfield.TextInputLayout

         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:textColorHint="@color/startblue"

         >

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Information de la table"
             android:ems="10"
             android:inputType="text"
             android:textSize="22sp"
             />

     </com.google.android.material.textfield.TextInputLayout>
 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:textStyle="bold">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/paiement"
            android:textStyle="bold"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especes"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autres"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RadioGroup>

    <Button
        android:id="@+id/payer"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/submit_form_pay"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="35dp"
        tools:ignore="InvalidId" />


</LinearLayout>